--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Emmart</title>
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script> 
   </head>
   <body class="bg-gray-100">
     <div id="root"></div>
