working on adding photos from device

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,11 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Emmart</title>
-  <script src="https://checkout.razorpay.com/v1/checkout.js"></script> 
+    <title>Emmart - Earthmover Listings</title>
+
+    <!-- Favicon (optional) -->
+    <link rel="icon" href="/favicon.ico" />
+
+    <!-- Razorpay Payment SDK -->
+    <script src="https://checkout.razorpay.com/v1/checkout.js" defer></script>
+
+    <!-- Meta tags for SEO (optional) -->
+    <meta name="description" content="Buy and sell used earthmoving vehicles like Excavators, JCBs, and Dozers across India." />
+    <meta name="keywords" content="Emmart, Earthmovers, JCB, CAT, used vehicles, Excavators" />
+    <meta name="author" content="Emmart Team" />
   </head>
-  <body class="bg-gray-100">
+
+  <body class="bg-gray-100 text-gray-900">
     <div id="root"></div>
+
+    <!-- Main React Application -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
